--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "start": "wrangler dev"
   },
   "devDependencies": {
+    "typescript": "^5.6.2",
     "wrangler": "^3.60.3"
+  },
+  "dependencies": {
+    "@cloudflare/ai": "^1.2.2",
+    "base64-js": "^1.5.1",
+    "hono": "^4.6.3",
+    "typescript": "^5.6.2"
   }
 }
