fix  css & async

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@cloudflare/ai": "^1.2.2",
     "base64-js": "^1.5.1",
     "hono": "^4.6.3",
+    "marked": "^14.1.2",
     "typescript": "^5.6.2"
   }
 }
